End of section 4

--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -298,11 +298,10 @@
   }
 </style>
 
-<div>
-<h1>Dating App</h1>
-  <app-value></app-value>
+<app-nav></app-nav>
+<app-home></app-home>
 
-</div>
+
 
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
